# barrage_slacker

./: Cargo.toml
migrations/2022-06-06-123826_create_users/: up.sql
migrations/2022-06-06-123840_create_messages/: up.sql
migrations/2022-06-06-123848_create_channels/: up.sql
migrations/2022-06-07-122739_relate_messages_users_channels/: up.sql
migrations/2022-06-09-101653_create_authenticable_users/: down.sql  up.sql
src/: diesel_functions.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs
src/application/: mod.rs
src/middleware/: auth.rs  auth_tibor.rs  mod.rs
src/models/: auth.rs  auth_responses.rs  authenticable_users.rs  channel.rs  message.rs  mod.rs  slack_responses.rs  user.rs
src/routes/: mod.rs
src/routes/auth/: login_user.rs  mod.rs  register_user.rs
src/routes/chat/: send_message.rs
src/routes/conversations/: get_conversation.rs  list_conversations.rs  mod.rs
src/routes/users/: list_users.rs
src/services/: jwt.rs
src/state/: app.rs  client.rs  db_pool.rs
